Move io_uring prototype from fibers branch to io_uring branch